--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 /* NAVIGATION */
-/* sfsa  */
+
 
 .navigation {
     position: absolute;
@@ -46,6 +46,16 @@ body {
     height: 70%;
     cursor: pointer;
     opacity: 1;
+}
+
+.iconHamburger {
+    position: absolute;
+    top: 50%;
+    right: 7%;
+    transform: translateY(-50%);
+    font-size: 55px;
+    color: rgba(255, 131, 0, .7);
+    opacity: 0;
 }
 
 .menuList {
@@ -523,4 +533,234 @@ body {
     left: 12%;
     font-size: 90px;
     color: rgba(255, 255, 255, .7);
+}
+
+@media (orientation: portrait) {
+
+    /* NAVIGATION  */
+
+    .logo {
+        height: 60%;
+    }
+
+    .iconHamburger {
+        opacity: 1;
+    }
+
+    .menuList {
+        opacity: 0;
+    }
+
+    /* HEADER  */
+
+    .header {
+        height: 100vh;
+    }
+
+    .cover {
+        height: 100vh;
+    }
+
+
+    .headerTitle {
+        position: absolute;
+        top: 60%;
+    }
+
+    .headerTitle h1 {
+        font-size: 3em;
+    }
+
+    .headerTitle h2 {
+        font-size: 1.8em;
+        margin-top: 15px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .headerTitle .headerButton {
+        height: 70px;
+        font-size: 30px;
+        line-height: 70px;
+        margin-top: 30px;
+    }
+
+    .headerTitle .headerButton:hover {
+        font-size: 31px;
+        line-height: 71px;
+    }
+
+    /* ABOUT  */
+
+    .about {
+        top: calc(8% + 96vh);
+        width: 100vw;
+        height: 700vh;
+    }
+
+    /* article 1  */
+
+    .aboutArticle1 {
+        width: 100%;
+        height: 110vh;
+    }
+
+    .aboutArticle1 .article1Title {
+        position: absolute;
+        top: 9%;
+        left: 5%;
+        width: 90%;
+    }
+
+    .aboutArticle1 .article1Description {
+        bottom: 0%;
+        right: 0%;
+        width: 100%;
+        line-height: 32px;
+    }
+
+    .aboutArticle1 .article1Description p:nth-child(1) {
+        font-size: 1.6em;
+    }
+
+    .aboutArticle1 .article1Description p:nth-child(2) {
+        font-size: 1.5em;
+    }
+
+    /* about images */
+
+    .aboutImages {
+        display: block;
+        top: 15%;
+        left: 50%;
+        margin-top: 40px;
+        width: 90%;
+    }
+
+    .aboutImages .aboutImage {
+        height: 90vh;
+        margin-top: 40px;
+    }
+
+    /* about article 2  */
+
+    .aboutArticle2 {
+        top: 41.5%;
+        height: 140vh;
+        width: 100%
+    }
+
+    .aboutArticle2Conteiner {
+        position: absolute;
+        top: 5%;
+        left: 5%;
+        bottom: 12%;
+        width: 90%;
+    }
+
+    /* Article2 title  */
+
+    .aboutArticle2 .article2Title {
+        position: absolute;
+        top: 5%;
+        left: 0;
+    }
+
+    .aboutArticle2 .article2Title p:nth-child(1) {
+        font-size: 1.5em;
+    }
+
+    .aboutArticle2 .article2Title p:nth-child(2) {
+        font-size: 2.8em;
+    }
+
+    /* Article2 description  */
+
+    .aboutArticle2 .article2Description {
+        position: absolute;
+        bottom: 14%;
+        width: 90%;
+    }
+
+
+
+    .aboutArticle2 .article2Description p {
+        font-size: 1.8em;
+        line-height: 1.8em;
+    }
+
+    .aboutArticle2Conteiner button {
+        width: 245px;
+        height: 60px;
+    }
+
+    .aboutArticle2Conteiner button:hover {
+        color: white;
+        background-color: #ff8300;
+    }
+
+
+    /* About Article 3 */
+
+    .aboutArticle3 {
+        top: 77.2%;
+        width: 100%;
+        height: 140vh;
+    }
+
+    .aboutArticle3Conteiner {
+        position: absolute;
+        top: 5%;
+        left: 5%;
+        bottom: 16%;
+        width: 90%;
+    }
+
+    /* Article3 title  */
+
+
+    .aboutArticle3 .article3Title p:nth-child(1) {
+        font-size: 1.5em;
+    }
+
+    .aboutArticle3 .article3Title p:nth-child(2) {
+        font-size: 4.5em;
+    }
+
+    /* Article3 description  */
+
+    .aboutArticle3 .article3Description {
+        bottom: 25%;
+        width: 100%;
+    }
+
+
+
+    .aboutArticle3 .article3Description p {
+        font-size: 1.8em;
+    }
+
+
+    .aboutArticle3Conteiner .dotts {
+        bottom: -80px;
+    }
+
+    .aboutArticle3Conteiner .dotts .dot {
+        width: 15px;
+        height: 15px;
+    }
+
+    .aboutArticle3Conteiner .dotts .dot:nth-child(1) {
+        box-sizing: content-box;
+        width: 16px;
+        height: 16px;
+    }
+
+
+    .aboutArticle3 i {
+        position: absolute;
+        top: 5%;
+        left: 2%;
+    }
+
 }
